<resources>
    <string name="app_name">jake_the_dog</string>
    <string name="feed_button">FEED</string>
    <string name="clean_button">CLEAN</string>
    <string name="water_button">WATER</string>
    <string name="play_button">PLAY</string>
    <string name="stats_button">STATS</string>
    <string name="back_button">BACK</string>
    <string name="animation_window">Animation window</string>
    <string name="toast_dead">OH NO JAKE DIED!</string>
    <string name="stats_hunger">Hunger Stats are sitting at: </string>
    <string name="stats_thirst">Thirst Stats are sitting at: </string>
    <string name="stats_clean">Clean Stats are sitting at: </string>
    <string name="stats_bored">Bored Stats are sitting at: </string>
    <string name="background_test">A tester background</string>
    <string name="ball">Ball Window</string>
    <string name="cloud_one">Cloud One</string>
    <string name="cloud_two">Cloud Two</string>
    <string name="ball_button">Ball Button</string>
    <string name="throw_ball">THROW!</string>
    <string name="pee_box">pee Window</string>
    <string name="pee_swipe">pee swipe</string>
</resources>
